...

  // Getters
  String get primaryButtonText {
    if (formType == AuthFormType.signup) {
      return 'Create an account'.i18n;
    } else {
      return 'Log In'.i18n;
    }
  }

  String get secondaryButtonText {
    if (formType == AuthFormType.signup) {
      return 'Have an account? Log in'.i18n;
...
      return 'Log in failed'.i18n;
    }
  }

  String get title {
    if (formType == AuthFormType.signup) {
      return 'Sign Up'.i18n;
    } else {
      return 'Log In'.i18n;
    }
  }

  bool canSubmitEmail(String email) {
...
