...

  @override
  Widget build(BuildContext context) {
    return Column(
      children: [
        Text(
          'Please choose an image:'.i18n,
          textAlign: TextAlign.center,
        ),
        const SizedBox(height: 15),
        Align(
          alignment: Alignment.center,
          child: InkWell(
...
