...
          child: Padding(
            padding: const EdgeInsets.symmetric(horizontal: 20.0),
            child: Column(
              mainAxisAlignment: MainAxisAlignment.center,
              children: [
                Text(
                  'Welcome!'.i18n,
                  style: theme.textTheme.headlineMedium!.copyWith(
                    fontSize: 28,
                  ),
                ),
                const SizedBox(height: 20),
                Text(
...
